# smart-contract-examples

.github/workflows/: pr-writer.yml
data-streams/data-streams-solana-integration/: Cargo.toml
data-streams/data-streams-solana-integration/crates/arrayvec/: Cargo.toml
data-streams/data-streams-solana-integration/sdk-off-chain/: Cargo.toml  README.md
data-streams/data-streams-solana-integration/sdk-off-chain/src/: access_controller_client.rs  lib.rs  verifier_admin_client.rs  verifier_client.rs
data-streams/data-streams-solana-integration/verify-sdk/: Cargo.toml  README.md
data-streams/data-streams-solana-integration/verify-sdk/src/: lib.rs
