[package]
name = "sdk-off-chain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
solana-sdk = "1.18.26"
solana-client = "1.18.26"
anchor-lang = "0.29.0"
verifier = { path = "../programs/verifier" }
data-streams-solana-verifier-sdk = { version = "0.1.0", path = "../verify-sdk"}
access-controller = { path = "../programs/access-controller" }
base64 = "0.22.1"
solana-transaction-status = "1.18.26"
