[package]
name = "data-streams-solana-verifier-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "0.10.4"

[target.'cfg(target_os = "solana")'.dependencies]
solana-program = { version = "1.18.26"}

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = { version = "1.18.26"}

[dev-dependencies]
solana-sdk = "1.18.26"